--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
-    <title>chess</title>
+    <title>Chess</title>
   </head>
   <body>
     <div id="board"></div>
-   </body>
+  </body>
   <script src="script.js"></script>
 </html>
