--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div id="board"></div>
+
+    <!--  displaying moves -->
+    <div class="movesHeadingBox">
+      <h1 class="movesHeading" id="movesHeading">Selected piece</h1>
+    </div>
+    <div class="movesDisplayBox">
+      <p id="movesText"class="movesText"></p>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
